--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
-  "name": "helloworld",
+  "name": "webdesign",
   "version": "1.0.0",
-  "description": "",
-  "main": "helloworld.js",
+  "description": "\"# website\"",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-	"start": "node helloworld.js"
+    "start": "node server.js"
   },
-  "keywords": [],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hicreeper/website.git"
+  },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/hicreeper/website/issues"
+  },
+  "homepage": "https://github.com/hicreeper/website#readme"
 }
